--- a/assets/stylesheets/timetable.css
+++ b/assets/stylesheets/timetable.css
@@ -6,7 +6,7 @@ body {padding-top:56px;}
 .selected-semester-li {background-color:#ccf;}
 
 #facebook_like_li {line-height:2.5;}
-#brand_button {font-weight:bold;font-size:24px;color:#ff0000;}
+#brand_button {font-weight:bold;font-size:24px;color:#153888;}
 
 .label{color:#555;}
 .label:hover {color:#000;}
@@ -18,11 +18,30 @@ body {padding-top:56px;}
 
 .label-info {background-color:#aaddff;}
 
-th {font-size:11px;}
-input#search_query_text {min-width:40%;margin-right:5px}
+th {font-size:10px;}
+@media (min-width:768px) {
+	th {font-size:11.5px;}
+}
+@media (min-width:1024px) {
+	th {font-size:13.5px;}
+}
+
 
 #search_form {padding:3px;margin-bottom:10px;}
-#search_type {float:left;margin-right:3px;}
+#search_cond_table {width:100%;display:table;}
+
+#search_btns {display:table-row;}
+@media (min-width:768px) {
+	#search_cond_table {width:70%;}
+}
+
+.child {display:table-cell;}
+#search_type {width:93px;padding-right:3px;}
+#search_input_container {padding-right:6px;}
+input#search_query_text {width:100%;padding:3px 5px;vertical-align:middle;}
+#search_button_container {width:52px;margin-bottom:2px;}
+button.btn.well {padding:6px 12px;margin:0px;border:1px solid #aaa;}
+
 .search-result-table th {text-align:center;}
 .search-result-table td {vertical-align:middle;font-size:9pt;}
 .search-result-table .classification {width:5%;text-align:center;}
@@ -38,22 +57,45 @@ input#search_query_text {min-width:40%;margin-right:5px}
 .search-result-table .location {width:5%;text-align:center;}
 .search-result-table .remark {width:15%;text-align:center;}
 .search-result-table tbody tr {cursor:pointer;}
-#lectures_content {min-height:100px;max-height:180px;overflow:scroll;overflow-x:hidden;border:1px solid #ccc;}
+#lectures_content {min-height:50px;max-height:105px;overflow:scroll;overflow-x:hidden;border:1px solid #ccc;}
+@media (min-height:600px) {
+	#lectures_content {max-height: 130px}
+}
+@media (min-height:702px) {
+	#lectures_content {max-height: 145px}
+}
+@media (min-height:804px) {
+	#lectures_content {max-height: 160px}
+}
+@media (min-height:906px) {
+	#lectures_content {max-height: 180px}
+}
+@media (min-height:1008px) {
+	#lectures_content {max-height: 200px}
+}
+@media (min-height:1110px) {
+	#lectures_content {max-height: 220px}
+}
+@media (min-height:1212px) {
+	#lectures_content {max-height: 240px}
+}
 #timetable_container {margin-top:10px;}
 
+
+#timetable th.visible-xs {font-size:13px;}
 #search_result_table tr.selected {background-color:#ccf}
 #my_courses_table tr.selected {background-color:#ccf}
 #timetable {width:100%;}
 #timetable th, #timetable td{text-align:center;vertical-align:middle;border:1px solid #ddd;line-height:100%;padding:0;}
 #timetable thead th {height:30px;}
-#timetable tbody th {width:100px;}
+#timetable tbody th {width:10%;padding:2px;line-height:1.3}
 #timetable tbody td {height:18px;}
 #timetable .period {font-size:1.2em;}
 #timetable .time {font-size:0.8em;}
 .timecell-container {position:absolute;z-index:100;}
-.timecell {position:relative;border:3px solid #ccc;text-align:center;cursor:pointer;}
+.timecell {font-size:11px;position:relative;border:2px solid #ceb;text-align:center;cursor:pointer;}
 #customcell_container {position:absolute;z-index:100;pointer-events:none;}
-#customcell {position:relative;border:3px dotted #f00;text-align:center;z-index:200;pointer-events:none;}
+#customcell {font-size:11px;position:relative;border:3px dotted #f00;text-align:center;z-index:200;pointer-events:none;}
 
 #footer {margin:20px 0 10px 0;padding:10px;text-align:center;border-top:1px solid #ddd;}
 #footer p {font-size:9pt;margin:0;padding:0;margin:3px;}
@@ -90,15 +132,15 @@ input#search_query_text {min-width:40%;margin-right:5px}
 .fb-comments, .fb-comments span, .fb-comments.fb_iframe_widget span iframe {width: 100% !important;}
 .fb-comments, .fb-comments.fb_iframe_widget iframe[style], .fb-comments.fb_iframe_widget span[style] {width: 100% !important;}
 
-#course_detail_wrapper {border:1px dotted #aaa;width:270px;position:fixed;z-index:10000;background-color:white;}
-#course_detail_wrapper div.course-title {background-color:#ddf;height:37px;padding:1px 5px 1px 5px;cursor:move;overflow:hidden;}
-#course_detail_wrapper #course_detail_title {font-size:10pt;float:left;}
-#course_detail {padding:3px;border-bottom:1px solid #eee;margin-bottom:5px;clear:both;}
-#course_detail_table {width:100%;}
-#course_detail_table th {text-align:center;padding:3px;width:65px;}
-#course_detail_table td {text-align:left;padding:3px;}
-#course_detail_buttons {text-align:center;padding:5px;}
-#course_detail_contract {background-image:url("/assets/images/arrow_contract.png");height:24px;width:24px;float:right;cursor:pointer;}
-#course_detail_expand {background-image:url("/assets/images/arrow_expand.png");height:24px;width:24px;float:right;cursor:pointer;}
-#course_detail_rating {width:120px;float:left;}
-#course_detail_rating_score {width:50px;float:left;font-size:12pt;margin-left:3px;padding-top:1px;margin-left:7px;font-weight:bold;}
+#course_detail_wrapper {width:100%;margin-top:5px;border-radius:4px;border:1px solid #aaa;background-color:#efefff;display:table;}
+#course_detail_wrapper #course_detail_title {float:none;font-size:15px;font-weight:900;margin:0px;padding:10px}
+#course_detail_wrapper .remark {float:none;font-size:13px;font-weight:400;margin:0px;padding:10px}
+
+#course_detail_info {width:100%;}
+#course_detail_plan_button {width:120px;margin:10px}
+
+.vcenter {
+	display:table-cell;
+	vertical-align: middle;
+	float:none;
+}
