--- a/assets/stylesheets/timetable.css
+++ b/assets/stylesheets/timetable.css
@@ -88,7 +88,7 @@ button.btn.well {padding:6px 12px;margin:0px;border:1px solid #aaa;}
 #timetable .period {font-size:1.2em;}
 #timetable .time {font-size:0.8em;}
 .timecell-container {position:absolute;z-index:100;}
-.timecell {position:relative;border-style:none;border-radius:8px;border:2px solid #ceb;text-align:center;cursor:pointer;}
+.timecell {position:relative;border-style:none;border-radius:8px;text-align:center;cursor:pointer;}
 .timecellinfo-containter{position:relative;top:50%;transform:translateY(-50%);}
 #customcell_container {position:absolute;z-index:100;pointer-events:none;}
 #customcell {font-size:11px;position:relative;border:3px dotted #f00;text-align:center;z-index:200;pointer-events:none;}
