--- a/assets/stylesheets/timetable.css
+++ b/assets/stylesheets/timetable.css
@@ -1,6 +1,6 @@
 
-@import url(http://fonts.googleapis.com/earlyaccess/jejugothic.css);
-* {font-family:'Jeju Gothic', serif,verdana;}
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+* {font-family:'Nanum Gothic', serif,verdana; font-weight:normal;}
 body {padding-top:56px;}
 
 .selected-semester-li {background-color:#ccf;}
@@ -129,7 +129,7 @@ button.btn.well {padding:6px 12px;margin:0px;border:1px solid #aaa;}
 .fb-comments, .fb-comments.fb_iframe_widget iframe[style], .fb-comments.fb_iframe_widget span[style] {width: 100% !important;}
 
 #course_detail_wrapper {width:100%;margin-top:5px;border-radius:4px;border:1px solid #aaa;background-color:#efefff;display:table;}
-#course_detail_wrapper #course_detail_title {float:none;font-size:15px;font-weight:900;margin:0px;padding:10px}
+#course_detail_wrapper #course_detail_title {float:none;font-size:15px;font-weight:normal;margin:0px;padding:10px}
 #course_detail_wrapper .remark {float:none;font-size:13px;font-weight:400;margin:0px;padding:10px}
 
 #course_detail_info {width:100%;}
