Fixed timetable design and size issue, delete btn + changing color issue

--- a/assets/stylesheets/timetable.css
+++ b/assets/stylesheets/timetable.css
@@ -78,7 +78,7 @@ button.btn.well {padding:6px 12px;margin:0px;border:1px solid #aaa;}
 #search_result_table tr.selected {background-color:#ccf}
 #my_courses_table tr.selected {background-color:#ccf}
 #timetable {width:100%;}
-#timetable th, #timetable td{text-align:center;vertical-align:middle;border:1px solid #ddd;border-right:1px solid #f3f3f3;line-height:100%;padding:0;}
+#timetable th, #timetable td{text-align:center;vertical-align:middle;border:1px solid #ddd;border-right:1px solid #f3f3f3;padding:0;}
 #timetable tr td:last-child, #timetable tr th:last-child{border-right:1px solid #ddd;}
 #timetable .halftimetr td{border-top:1px dashed #ddd;}
 #timetable tr:not(.halftimetr) td{border-bottom-style:none;}
@@ -89,9 +89,9 @@ button.btn.well {padding:6px 12px;margin:0px;border:1px solid #aaa;}
 #timetable .time {font-size:0.8em;}
 .timecell-container {position:absolute;z-index:100;}
 .timecell {position:relative;border-style:none;border-radius:8px;text-align:center;cursor:pointer;}
-.timecellinfo-containter{position:relative;top:50%;transform:translateY(-50%);}
-#customcell_container {position:absolute;z-index:100;pointer-events:none;}
-#customcell {font-size:11px;position:relative;border:3px dotted #f00;text-align:center;z-index:200;pointer-events:none;}
+.timecellinfo-containter{position:relative;top:50%;-webkit-transfrom:translateY(-50%); -ms-transfrom: translateY(-50%); transform:translateY(-50%);}
+#customcell_container {position:absolute;z-index:101;pointer-events:none;}
+#customcell {font-size:11px;position:relative;border:2px dotted #f00;text-align:center;z-index:200;pointer-events:none;}
 
 #footer {margin:20px 0 10px 0;padding:10px;text-align:center;border-top:1px solid #ddd;}
 #footer p {font-size:9pt;margin:0;padding:0;margin:3px;}
