--- a/views/snutt/timetable_footer.htm
+++ b/views/snutt/timetable_footer.htm
@@ -26,7 +26,7 @@
       };
     </script>
 
-		<div class="navbar navbar-default navbar-fixed-top">
+		<div id="bar-top" class="navbar navbar-default navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -188,7 +188,7 @@
 						<h3 id="course_detail_title" class="course_detail_toggle"></h3>
 						<h5 class="remark"></h5>
 					</div>
-					<button class="vcenter btn btn-warning" id="course_detail_plan_button">강의계획서</button>
+					<button class="vcenter btn" id="course_detail_plan_button">강의계획서</button>
 				</div>
 				<div id="timetable_container">
 					<div id="timecells_container">
