Changed footer information, inserted wafflestudio logo

--- a/views/snutt/timetable_footer.htm
+++ b/views/snutt/timetable_footer.htm
@@ -391,13 +391,16 @@
 
 			<div id="footer">
 				<h6>
-				Initially Developed by <a href="http://www.facebook.com/jongmin.rok" target="_blank">Jongmin</a> in <a href="http://www.wafflestudio.com" target="_blank">Wafflestudio</a>
+          <a href="https://www.facebook.com/wafflestudio" target="_blank">
+            <img id="waffle_logo" src="/assets/images/waffle_logo.png" alt="와플스튜디오 로고, WaffleStudio Logo"/> <br/>
+          </a>
+				Initially Developed by <a href="http://www.facebook.com/jongmin.rok" target="_blank">Jongmin Lee</a> in <a href="http://www.wafflestudio.com" target="_blank">Wafflestudio</a>
 				</h6>
 				<h6>
-				Currently Maintained and Improved by <a href="https://www.facebook.com/wafflestudio" target="_blank">Wafflestudio</a> SNUTT Team members.
+				Currently Managed by <a href="https://www.facebook.com/wafflestudio" target="_blank">Wafflestudio</a> SNUTT Team members.
 				</h6>
 				<h6>
-				Source code and contributor information are available on <a href="https://github.com/wafflestudio/snutt" target="_blank">this GitHub repository</a>.
+				Source code and contributor information are available on <a href="https://github.com/wafflestudio/snutt" target="_blank">this SNUTT GitHub repository</a>.
 				</h6>
 				<p style="display:none;">
 				최근 수강편람 업데이트 : <span id="data_updated_at"></span>
