--- a/assets/stylesheets/timetable.css
+++ b/assets/stylesheets/timetable.css
@@ -1,4 +1,3 @@
-
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 * {
 	font-family:'Nanum Gothic', serif,verdana; 
@@ -6,6 +5,7 @@
 	box-shadow:none !important;
 	text-shadow:none !important
 }
+
 body {padding-top:56px;}
 
 .selected-semester-li {background-color:#ccf;}
@@ -16,7 +16,13 @@ body {padding-top:56px;}
 	border: none !important;
 	font-family:'Nanum Gothic'
 }
+
 #brand_button {font-weight:900;font-size:22px;color:#008800;}
+#waffle_logo {
+  width:170px;
+  height:auto;
+  padding-bottom:10px;
+}
 
 .ui-dialog-titlebar {
 	background:#eeffee !important;
@@ -92,9 +98,10 @@ button.btn.well {padding:6px 12px;margin:0px;border:1px solid #aaa;background:no
 
 #footer {margin:20px 0 10px 0;padding:10px;text-align:center;border-top:1px solid #ddd;}
 #footer p {font-size:9pt;margin:0;padding:0;margin:3px;}
-#footer a:visited {color:#c53535;text-decoration:none;}
-#footer a:link {color:#c53535;text-decoration:none;}
-#footer a:hover {color:#c53535;text-decoration:none;}
+#footer a {font-weight:600;}
+#footer a:visited {color:#000000;text-decoration:none;}
+#footer a:link {color:#000000;text-decoration:none;}
+#footer a:hover {color:#000000;text-decoration:none;}
 
 #search_filter {margin-top:10px;}
 #search_filter_footer {clear:both;}
