commented out fb

--- a/views/snutt/timetable_footer.htm
+++ b/views/snutt/timetable_footer.htm
@@ -4,7 +4,7 @@
 	<body>
 		<!-- facebook test -->
     <script>
-      window.fbAsyncInit = function() {
+      /*window.fbAsyncInit = function() {
         FB.init({
       appId      : '903282846383973',
       xfbml      : true,
@@ -17,7 +17,7 @@
        js = d.createElement(s); js.id = id;
        js.src = "//connect.facebook.net/en_US/sdk.js";
        fjs.parentNode.insertBefore(js, fjs);
-       }(document, 'script', 'facebook-jssdk'));
+       }(document, 'script', 'facebook-jssdk'));*/
     </script>
 		<div id="bar-top" class="navbar navbar-default navbar-fixed-top">
 			<div class="container">
