--- a/views/snutt/timetable_footer.ejs.htm
+++ b/views/snutt/timetable_footer.ejs.htm
@@ -375,6 +375,8 @@
 							<input type="text" placeholder="담벼락에 게시될 메시지를 입력하세요." id="facebook_message" />
 							<button type="submit" id="publish_facebook_ok_button" class="btn">확인</button>
 						</form>
+						<a href="#export_ncal" id="export_ncal_button" class="btn btn-danger" onclick="exportCal('naver')")>네이버 캘린더로 내보내기</a>
+						<a href="#export_gcal" id="export_gcal_button" class="btn btn-danger" onclick="exportCal('google')">구글 캘린더로 내보내기</a>
 						<p>
 						* 이미지 저장하기 버튼이 작동하지 않으면 위에 있는 그림을 [우클릭 -&gt; 다른 이름으로 사진 저장]으로 직접 저장하세요.
 						</p>
