--- a/views/snutt/ad/ad.ejs.htm
+++ b/views/snutt/ad/ad.ejs.htm
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href="/assets/stylesheets/ad.css">
 
 <div id="ad_wrapper">
-  <span id="ad_text"><b>1월 18일 업데이트</b><br/>이제 저장하기를 누르면 시간표가 내 컴퓨터에 자동으로 저장돼요!</span>
-  <img src="image/ad/20150118_kakao.png">
+  <span id="ad_text"><b>2월 1일 업데이트</b><br/>구글, 네이버 캘린더로 내보내기 기능이 추가되었습니다! + 에러 개선</span>
+  <img src="/image/ad/20150118_kakao.png">
 </div>
