ad change _ 2015-1 semester start

--- a/views/snutt/ad/ad.ejs.htm
+++ b/views/snutt/ad/ad.ejs.htm
@@ -1,6 +1,1 @@
-<link rel="stylesheet" type="text/css" href="/assets/stylesheets/ad.css">
-
-<div id="ad_wrapper">
-  <span id="ad_text"><b>2월 1일 업데이트</b><br/>구글, 네이버 캘린더로 내보내기 기능이 추가되었습니다! + 에러 개선</span>
-  <img src="/image/ad/20150118_kakao.png">
-</div>
+150308.ad.ejs.htm
