--- a/views/snutt/members.ejs.htm
+++ b/views/snutt/members.ejs.htm
@@ -1,7 +1,7 @@
     </script> 
   </head>
 <body>
-<link rel="stylesheet" type="text/css" href="/assets/stylesheets/timetable.css">
+<link rel="stylesheet" type="text/css" href="/asset/timetable.css">
 <style>
   body {
     padding: 20px !important;
@@ -47,7 +47,7 @@
 </div>
 <div>
   <a href="http://www.wafflestudio.com" target="_blank">
-    <img id="waffle_logo" src="/assets/images/waffle_logo.png" alt="와플스튜디오 로고, WaffleStudio Logo"/>
+    <img id="waffle_logo" src="/asset/waffle_logo.png" alt="와플스튜디오 로고, WaffleStudio Logo"/>
   </a>
 </div>
 <div>
