--- a/views/snutt/timetable_footer.ejs.htm
+++ b/views/snutt/timetable_footer.ejs.htm
@@ -391,7 +391,7 @@
 			<div id="footer">
         <h6>
           <a href="https://www.facebook.com/wafflestudio" target="_blank">
-            <img id="waffle_logo" src="/assets/images/waffle_logo.png" alt="와플스튜디오 로고, WaffleStudio Logo"/>
+            <img id="waffle_logo" src="/asset/waffle_logo.png" alt="와플스튜디오 로고, WaffleStudio Logo"/>
           </a>
         </h6>
         <h6>
@@ -408,7 +408,7 @@
 		</div> <!-- /container -->
 		<div id="init_loading_modal">
 			<div id="init_loading_image">
-				<img src="/assets/images/loading.gif" alt="init-loading" />
+				<img src="/asset/loading.gif" alt="init-loading" />
 			</div>
 			<p>
 			로딩중입니다. 잠시만 기다려 주세요.
@@ -417,7 +417,7 @@
 
 		<div id="facebook_loading_modal">
 			<div id="facebook_loading_image">
-				<img src="/assets/images/loading.gif" alt="facebook-loading" />
+				<img src="/asset/loading.gif" alt="facebook-loading" />
 			</div>
 			<p>
 			이미지를 등록중입니다. 잠시만 기다려 주세요.
