--- a/views/snutt/ad/150308.ad.ejs.htm
+++ b/views/snutt/ad/150308.ad.ejs.htm
@@ -1,6 +1,9 @@
-<link rel="stylesheet" type="text/css" href="/assets/stylesheets/ad.css">
+<link rel="stylesheet" type="text/css" href="/asset/ad.css">
 
 <div id="ad_wrapper">
-  <span id="ad_text"><b>3월 8일 개강기념 업데이트 XD</b><br/>이제 21학점을 넣어도 시간표가 잘 저장됩니다! (개발자가 21을 들어본 적이 없어서...)</span>
-  <img src="/image/ad/ad.png">
+  <span id="ad_text">
+    <b>3월 8일 개강기념 업데이트</b><br/>이제 21학점을 넣어도 시간표가 잘 저장됩니다!
+    <br>다시 방학 때로 돌아가하고 싶네요...
+  </span>
+  <img src="/asset/ad/ad.png">
 </div>
