--- a/views/snutt/timetable_header.htm
+++ b/views/snutt/timetable_header.htm
@@ -6,9 +6,9 @@
 		<meta name="og:title" content="서울대학교 시간표 SNUTT" />
 		<meta name="og:type" content="timetable" />
 		<meta name="og:site_name" content="SNUTT" />
-		<meta name="og:description" content="서울대학교 시간표 작성 웹서비스!" />
+		<meta name="og:description" content="서울대학교 시간표 작성 웹서비스" />
 		
-		<title>서울대학교 시간표 SNUTT</title>
+		<title>서울대학교 시간표 : SNUTT</title>
 		
 		<!-- jQuery -->		
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -20,14 +20,13 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-		<link href="/assets/stylesheets/timetable.css" media="all" rel="stylesheet" type="text/css" />
+		<link href="asset/timetable.css" media="all" rel="stylesheet" type="text/css" />
 
-		<script src="/assets/javascripts/utils.js" type="text/javascript"></script>
-		<script src="/assets/javascripts/exportpng.js" type="text/javascript"></script>
-		<script src="/assets/javascripts/timetable_common.js" type="text/javascript"></script>
-		<script src="/assets/javascripts/timetable_snutt.js" type="text/javascript"></script>
+		<script src="asset/utils.js" type="text/javascript"></script>
+		<script src="asset/exportpng.js" type="text/javascript"></script>
+		<script src="asset/timetable_common.js" type="text/javascript"></script>
+		<script src="asset/timetable_snutt.js" type="text/javascript"></script>
 		<script type="text/javascript">
-
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-31273143-1']);
 		  _gaq.push(['_setDomainName', 'snutt.kr']);
@@ -38,6 +37,5 @@
 			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		  })();
-
 		</script>
 		<script type="text/javascript">
