--- a/views/snutt/user_timetable_header.htm
+++ b/views/snutt/user_timetable_header.htm
@@ -9,11 +9,10 @@
 		<meta name="og:description" content="서울대학교 시간표 작성 웹서비스!" />
 		<title>SNUTT</title>
 
-		<link href="/assets/stylesheets/user_timetable.css" media="all" rel="stylesheet" type="text/css" />
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script src="/assets/javascripts/user_timetable.js" type="text/javascript"></script>
+		<link href="/asset/user_timetable.css" media="all" rel="stylesheet" type="text/css" />
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="/asset/user_timetable.js" type="text/javascript"></script>
 		<script type="text/javascript">
-
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-31273143-1']);
 		  _gaq.push(['_setDomainName', 'snutt.kr']);
@@ -24,6 +23,5 @@
 			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		  })();
-
 		</script>
 		<script type="text/javascript">
