corrected misspelled words

--- a/views/snutt/ad/150308.ad.ejs.htm
+++ b/views/snutt/ad/150308.ad.ejs.htm
@@ -3,7 +3,7 @@
 <div id="ad_wrapper">
   <span id="ad_text">
     <b>3월 8일 개강기념 업데이트</b><br/>이제 21학점을 넣어도 시간표가 잘 저장됩니다!
-    <br>다시 방학 때로 돌아가하고 싶네요...
+    <br>개강이라니ㅜㅜㅜㅜㅠㅠ
   </span>
   <img src="/asset/ad/ad.png">
 </div>
